# bharatcitizen_ai

./: .dockerignore  .editorconfig  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  USER_MANUAL.md  app.py  cliff.toml  docker-compose.yml  pyproject.toml  requirements.txt  start_backend.bat  start_frontend.bat
.specify/memory/: architecture.md  coding-standards.md  project.md  tech-stack.md
backend/: Dockerfile  main.py  requirements.txt
backend/api/: api.py
backend/core/: config.py
backend/ingestion/: ingest.py  production_ingest.py
backend/schemas/: chat.py
backend/services/: adk_agents.py  adk_tools.py  ingestion_service.py  rag_service.py  response_templates.py
docs/: ADK_PRODUCTION_READINESS_REPORT.md  AI_LANGUAGE_CONTROL_REPORT.md  BACKEND_AND_CITIZEN_ASSISTANT_FIX_REPORT.md  BACKEND_CONNECTIVITY_REPORT.md  CHAT_EXECUTION_TRACE.md  CITIZEN_ASSISTANT_VALIDATION.md  COVERAGE_EXPANSION_REPORT.md  FALLBACK_REMOVAL_REPORT.md  KNOWLEDGE_BASE_EXPANSION_REPORT.md  MIGRATION_REPORT.md  MULTILINGUAL_SYSTEM_REPORT.md  PROJECT_STATUS.md  RAG_ARCHITECTURE_FIX.md  RAG_IMPLEMENTATION_REPORT.md  RAG_PROOF_REPORT.md  REAL_DATA_RAG_IMPLEMENTATION_REPORT.md  RESPONSE_TEMPLATE_REPORT.md
pages/: status.py
scripts/: create_knowledge_files.py  init_db.py  inspect_db.py  rag_diagnostic.py  rebuild_db.py  test_chat_api.py  test_rag.py
specs/: README.md  example.spec.md
tests/: conftest.py  test_adk_agents.py  test_backend_routes.py  test_smoke.py
(+24 files in other folders)
